tests/snapshots/p1_gallery__gallery_174x43.snap
---
source: tests/p1_gallery.rs
expression: text
---
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                                                                                                                  
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                                                                                                                  
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                                                                                                                  
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣴⣶⣶⣶⣶⣤⣴⡆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                                                                                                                  
⠀⠀⣠⣤⠀⠀⠀⠀⠀⠀⢀⣼⣶⡀⣠⣿⣤⣄⣄⡀⠀⣠⣧⣾⣿⣿⣿⣿⣿⣿⣿⣿⡄⠀⠀⣀⣄⠀⠀⠀⢀⣀⡀⢀⣠⣿⣿⣿⣤⡄⠀⠀⠀⢠⣄⠀⠀⠀⠀⠀                                                                                                                  
⣆⣼⣿⣿⣧⣄⢠⣄⣀⣠⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣆⢠⣾⣿⣷⣾⣿⣿⣿⣿⣿⣿⣄⣀⣴⣿⣿⣦⣤⣰⣤⣦                                                                                                                  
⣿⣿⣿⣿⣿⣿⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                                                                                                  
⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                                                                                                  
▁▁▁▁▂▂▂▃▂▁▁▂▂▂▂▂▂▂▂▂▂▂▂▁▁▁▁▂                                                                                                                                                  
████████████████████████████                                                                                                                                                  
████████████████████████████                                                                                                                                                  
                                                                                                                                                                              
                                                                                                                                                                              
hbar ██████▊░░░░░░░░░ 42%   gauge ━━━━━━━━━━━━━━━━━━━━━━ 38%                                                                                                                  
                                                                                                                                                                              
                                                                                                                                                                              
 all 15  ● running 9  ‖ paused 1  ✗ crashed 1  ○ off 4
