tests/snapshots/p1_gallery__hbar_042.snap
---
source: tests/p1_gallery.rs
expression: "format!(\"{fill}{rest}\")"
---
██████▊░░░░░░░░░
