tests/snapshots/p1_gallery__lg_038.snap
---
source: tests/p1_gallery.rs
expression: "format!(\"{on}{off}\")"
---
━━━━━━━━━━━━━━━━━━━━━━
