tests/snapshots/p1_gallery__spark_mem_28x3.snap
---
source: tests/p1_gallery.rs
expression: "charts::spark_rows(&mem, 28, 3).join(\"\\n\")"
---
▁▁▁▁▂▂▂▃▂▁▁▂▂▂▂▂▂▂▂▂▂▂▂▁▁▁▁▂
████████████████████████████
████████████████████████████
